# holoForensics

./: .gitignore  AGENTS.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  capture-ui-screenshots.ps1  docker-compose.search.yml
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/hooks/: git-doc-sync.json  validate-git-doc-sync.ps1
.github/release-notes/: v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md
.github/scripts/: bootstrap-windows-build-runner.ps1  install-rust-stable.cmd  scan-secrets.ps1
.github/workflows/: notify-homepage.yml  windows-exe.yml
holoForensics.wiki/: Home.md
holoForensics.wiki/collections/: README.md
holoForensics.wiki/collections/windows/: README.md  bits.md  browser_artifacts.md  evtx.md  indx.md  jump_lists.md  lnk.md  logfile.md  mft.md  mplogs.md  outlook.md  powershell_activity.md  prefetch.md  recycle_bin.md  registry.md  scheduled_tasks.md  search.md  shimdb.md  srum.md  usn_journal.md  wmi_repository.md
holoForensics.wiki/parsers/: README.md  linux_shell_history.md  macos_browser_history.md  macos_quarantine_events.md
holoForensics.wiki/parsers/generic/: README.md
holoForensics.wiki/parsers/windows/: README.md  amcache.md  bits.md  browser_history.md  event_logs.md  jump_lists.md  mft.md  mplogs.md  outlook.md  prefetch.md  recycle_bin.md  recycle_bin_info2.md  restore_point_log.md  (+14 more)
src/: app.rs  collection.rs  collection_catalog.rs  collection_metadata.rs  desktop.rs  lib.rs  main.rs  manifest.rs  opensearch.rs  parser_catalog.rs  runtime_support.rs
src/parsers/: common.rs  linux_shell_history.rs  macos_artifacts.rs  mod.rs
ui/: app_window.slint  components.slint  models.slint  theme.slint
ui/dialogs/: about_dialog.slint  error_dialog.slint  evidence_scope_dialog.slint  settings_dialog.slint  shadow_copy_recovery_dialog.slint  usn_settings_dialog.slint
ui/pages/: collection_page.slint  parse_page.slint
(+27 files in other folders)
