[package]
name = "holo-forensics"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
publish = false
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
flate2 = { version = "1.1.5", default-features = false, features = ["rust_backend"] }
glob = "0.3.3"
ntfs = "0.4.0"
notatin = { git = "https://github.com/strozfriedberg/notatin", rev = "ae3a706", default-features = false }
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
artemis_forensics = { package = "forensics", path = "third_party/artemis/forensics", default-features = false }
slint = { version = "1.16.1", features = ["backend-winit", "renderer-software", "unstable-fontique-08", "raw-window-handle-06"] }
walkdir = "2.5.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate-flate2"] }
directories = "6.0.0"
raw-window-handle = "0.6.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_Graphics_Dwm",
	"Win32_Security",
	"Win32_Storage_FileSystem",
	"Win32_Storage_Vss",
	"Win32_System_Console",
	"Win32_System_Com",
	"Win32_System_IO",
	"Win32_System_Ioctl",
	"Win32_System_Registry",
	"Win32_System_SystemInformation",
	"Win32_System_Rpc",
	"Win32_System_Threading",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
ico = "0.3.0"
resvg = "0.47.0"
slint-build = "1.16.1"
winres = "0.1.12"
